# Proyecto-de-Software

./: README.md  index.html  index.md  primeraEntrega.md
ACT1-TEORIA/: estilosIA.css  index.html
Documentos/: consulta1.md  enunciado1raEntrega.md
Otros/: README.html  index.html  style.css
Teoria/: Actividad1.md  README.md
actividad_2/: README.md  pyproject.toml
actividad_2/src/: app.py
actividad_2/tests/: test_actividad_2.py
admin/: app.py  pyproject.toml
admin/src/core/: board.py  database.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: issues.py
admin/src/web/templates/: about.html  contact.html  error.html  home.html  layout.html
admin/src/web/templates/issues/: index.html
admin/static/: about.css  contact.css  error.css  issues.css  layout.css
admin/tests/: __init__.py  test_web.py
flask-contacts_app/: app.py
practica/explicacionPracticaUno/: README.md  main.py
practica/explicacionPracticaUno/src/: calculator.py  operations.py
