[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Fabian-Martinez-Rincon <fabianmartinezrincon.123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
